.provarCaches/00D410000011HE0EAM/objects/rstk__sopackprtline__c.object
<CustomObject>
    <description>sopackprtline__c</description>
    <fields>
        <fullName>rstk__backorder__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Back Order Qty</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__custproddesc__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Customer Product Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__custprodname__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Customer Product Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__dateshipover__c</fullName>
        <label>Date Shipped Override</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__dateshipped__c</fullName>
        <label>Date Shipped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__description__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>A detailed description of a line item</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__line__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>line</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__linetype__c</fullName>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Empty</fullName>
                </value>
                <value>
                    <fullName>Detail</fullName>
                </value>
                <value>
                    <fullName>Description</fullName>
                </value>
                <value>
                    <fullName>Component</fullName>
                </value>
                <value>
                    <fullName>Comment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__orderline__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sales Order Line Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__packslipprt__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Packing Slip Print Number</label>
        <referenceTo>rstk__sopackprt__c</referenceTo>
        <relationshipLabel>Packing Slip Print Line</relationshipLabel>
        <relationshipName>lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__product__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Product Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__quantity__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__salesorder__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sales Order Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__seq__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sequence Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__shipper__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Shipper Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sopackline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Packing Slip Line</label>
        <referenceTo>rstk__sopackline__c</referenceTo>
        <relationshipLabel>Packing Slip Print Lines</relationshipLabel>
        <relationshipName>Packing_Slip_Print_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__uom__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Unit Of Measure</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Packing Slip Print Line</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Packing Slip Print Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>